--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^8.0.0",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
