--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "e": "^0.2.33",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-date-picker": "^5.0.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-safe-area-context": "^4.10.1",
