--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-picker/picker": "^2.7.6",
     "@react-native-vector-icons/ionicons": "^7.3.1-alpha.9",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "e": "^0.2.33",
