--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-date-picker": "^5.0.2",
     "react-native-datepicker": "^1.7.2",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-reanimated": "^3.12.0",
+    "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0"
   },
