--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^8.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.7.6",
     "@react-native-vector-icons/ionicons": "^7.3.1-alpha.9",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "e": "^0.2.33",
     "react": "18.2.0",
     "react-native": "0.73.6",
@@ -28,7 +30,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-reanimated": "^3.12.0",
-    "react-native-safe-area-context": "^4.10.4",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0"
   },
