--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-bouncy-checkbox": "^4.0.1",
+    "react-native-calendars": "^1.1305.0",
     "react-native-date-picker": "^5.0.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.16.2",
@@ -32,7 +33,8 @@
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
