--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "e": "^0.2.33",
+    "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-bouncy-checkbox": "^4.0.1",
