--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-actions-sheet": "^0.9.3",
     "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-calendars": "^1.1305.0",
     "react-native-date-picker": "^5.0.2",
     "react-native-datepicker": "^1.7.2",
-    "react-native-gesture-handler": "^2.16.2",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "^1.15.6",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-reanimated": "^3.12.0",
+    "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
