--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^8.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.7.7",
     "@react-native-vector-icons/ionicons": "^7.3.1-alpha.9",
     "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -37,8 +38,8 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.15.6",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-reanimated": "^3.12.1",
-    "react-native-safe-area-context": "^4.10.5",
+    "react-native-reanimated": "^3.13.0",
+    "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.3.0",
