--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "e": "^0.2.33",
     "expo-font": "^12.0.7",
     "expo-image-picker": "^15.0.7",
+    "expo-local-authentication": "^14.0.1",
     "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
