--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^8.1.1",
@@ -39,7 +40,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.15.6",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-reanimated": "^3.13.0",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
