--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.3.0",
-    "react-native-video-controls": "^2.8.1"
+    "react-native-video-controls": "^2.8.1",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
